--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <form id="loginForm">
             <input type="email" id="email" placeholder="Correo electrónico" required>
             <input type="password" id="password" placeholder="Contraseña" required>
-            <button type="submit">Iniciar Sesión</button>
+            <button type="submit" id="loginButton">Iniciar Sesión</button>
         </form>
         <div id="message" class="message" style="display: none;"></div>
     </div>
